# schedule-alarm

./: .gitignore  CMakeLists.txt  README.md  There a are five types of schedule loops.md  pytest_http_server_file_serving.py  sdkconfig  sdkconfig.old
components/data_structs/: CMakeLists.txt
components/data_structs/schedule/: schedule.cpp  schedule.hpp
components/http_controller/: CMakeLists.txt  http_controller.cpp  http_controller.hpp
components/http_server/: CMakeLists.txt  http_server.cpp  http_server.hpp
components/relay/: CMakeLists.txt  ConstantRelay.cpp  ConstantRelay.hpp  IRelay.hpp  ImpulseRelay.cpp  ImpulseRelay.hpp  RelayController.cpp  RelayController.hpp
components/schedule/: CMakeLists.txt  schedule.cpp  schedule.hpp
components/schedule/schedule_types/: i_schedule.hpp  multiple_days_schedule.cpp  multiple_days_schedule.hpp  schedule_custom.cpp  schedule_custom.hpp  schedule_daily.cpp  schedule_daily.hpp  schedule_monthly.cpp  schedule_monthly.hpp  schedule_weekly.cpp  schedule_weekly.hpp  schedule_yearly.cpp  schedule_yearly.hpp
components/schedule/schedules/: i_schedule.hpp  schedule_daily.cpp  schedule_daily.hpp  schedule_monthly.cpp  schedule_monthly.hpp  schedule_weekly.hpp  schedule_yearly.hpp
components/server/: CMakeLists.txt  http_server.cpp  http_server.hpp
components/settings/: CMakeLists.txt  config.hpp  settings.cpp  settings.hpp  settings_struct.hpp
components/sleep/: CMakeLists.txt  sleep.cpp  sleep.hpp
components/util/: CMakeLists.txt  cjson_helper.hpp  memory_utils.hpp
components/util/uri_encoder/: uri_encoder.cpp  uri_encoder.hpp
components/utility/uri_encoder/: uri_encoder.cpp  uri_encoder.hpp
components/wifi_controller/: CMakeLists.txt  sntp.cpp  sntp.hpp  wifi_controller.cpp  wifi_controller.hpp
components/wifi_manager/: CMakeLists.txt  wifi_manager.cpp  wifi_manager.hpp
data_image/: index.html  settings.html
main/: CMakeLists.txt  Kconfig.projbuild  file_server.c  file_serving_example_common.h  main.c  main.cpp
mvc/: CMakeLists.txt
mvc/controllers/time/: TimeController.cpp  TimeController.hpp
mvc/models/schedule/: IScheduleObserver.hpp  ScheduleModel.cpp  ScheduleModel.hpp
mvc/views/relay/: RelayView.cpp  RelayView.hpp
website/: CMakeLists.txt  README.txt  generate_schedule.py  site_builder.py
website/source/: calendar.css  calendar.js  connectors.js  index.html  index.js  schedule.js  style.css  test.html
website/source/tests/: index.html  schedules.tests.js
